demo/threatfeeds/security.block-threadfeed.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.block-threadfeed
spec:
  tier: security
  order: 210
  selector: all()
  types:
  - Egress
  egress:
  - action: Deny
    destination:
      selector: threatfeed == "feodo"||threatfeed == "snort"||threatfeed == "tor"
  - action: Pass
